# spectral-tech-cpp-course

./: .gitignore  .gitmodules  README.md
cache-benchmark/: CMakeLists.txt  L1D_assoc.cpp  L1d_cache_size.cpp  L2_cache_size_latency.cpp  L3_assoc.cpp  L3_cache_size_latency.cpp  cache_line_size.cpp  cacheutil.h  readme.md
tasks/: CMakeLists.txt  README.md  deadline.json  test.json
tasks/abort/: CMakeLists.txt  checker.py  readme.md  stacktrace.cpp  test.cpp  test.json
tasks/avx-matmul/: CMakeLists.txt  avx_matmul.h  readme.md  test.cpp
tasks/avx-vector/: CMakeLists.txt  avx_vector.h  readme.md  test.cpp  test.json
tasks/bgrep/: CMakeLists.txt  bgrep.h  build.cmake  commons.h  main.cpp  readme.md  test.cpp  test.json  validator.py
tasks/buffered-channel/: CMakeLists.txt  buffered_channel.h  readme.md  test.json
tasks/byte_order/: CMakeLists.txt  byte_order.h  readme.md  test.cpp  test.json
tasks/clever-set/: CMakeLists.txt  clever_set.h  readme.md  test.cpp
tasks/cmake/: BuildFlags.cmake  TestSolution.cmake
tasks/concepts/: indexable.h  predicate.h  readme.md  test.cpp  test.json
tasks/cow-vector/: cow_vector.h  readme.md  test.cpp
tasks/deque/: deque.h  readme.md  test.cpp
tasks/fixstr-utils/: CMakeLists.txt  fixstr.h  readme.md  test.cpp
tasks/fold/: fold.h  readme.md  test.cpp
tasks/fuzzy-search/: CMakeLists.txt  Main.cpp  fuzzy_search.h  readme.md  test.cpp
tasks/intrusive-list/: intrusive_list.h  readme.md  test.cpp  test.json
tasks/itertools/: itertools.h  readme.md  test.json
tasks/multiplication/: multiplication.h  readme.md  test.json
tasks/orderbook/: CMakeLists.txt  eth.pcapng  pcapng.hpp  test.json  test_parser.cpp  types.hpp
tasks/reduce/: CMakeLists.txt  readme.md  reduce.h  test.cpp  test.json
tasks/reverse_vector/: CMakeLists.txt  readme.md  reverse_vector.h  test.cpp
tasks/rw-spinlock/: CMakeLists.txt  readme.md  run.cpp  rw_spinlock.h  test.json
tasks/set_allocator/: CMakeLists.txt  readme.md  static_stl_allocator.h  test.cpp
tasks/shm-matrix/: CMakeLists.txt  readme.md  test.json  tester.py
tasks/short_view/: CMakeLists.txt  readme.md  short_view.h  test.cpp  test.json
tasks/small-vector/: CMakeLists.txt  readme.md  small_vector.h  test.cpp
tasks/sse-search/: CMakeLists.txt  readme.md  sse_search.h  test.cpp  test.json
tasks/static-map/: readme.md  static_map.h  test.cpp  test.json
tasks/static_allocator/: CMakeLists.txt  readme.md  static_allocator.h  test.cpp
tasks/tic-tac-toe/: CMakeLists.txt  PlayerStrategy.cpp  PlayerStrategy.h  (+4 more)
(+36 files in other folders)
