cmake_minimum_required(VERSION 3.10)
project(cache-benchmark LANGUAGES C CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(cache-benchmark cache_line_size.cpp
        L1D_assoc.cpp
        L1d_cache_size.cpp
        L2_assoc.cpp
        L2_cache_size_latency.cpp
        L3_cache_size_latency.cpp
        L3_assoc.cpp)
